cmake_minimum_required(VERSION 3.7.2)
project(VulkanLearning)

if(MSVC)
  list(APPEND CMAKE_PREFIX_PATH C:/Glfw3)
  list(APPEND CMAKE_PREFIX_PATH C:/glm)
  set(VULKAN_SDK C:/VulkanSDK/1.1.73.0)
endif()

add_subdirectory(00-init-instance)
add_subdirectory(01-enumarate-devices)
add_subdirectory(02-init-device)
add_subdirectory(03-init-command-buffer)
add_subdirectory(04-init-swapchain)
add_subdirectory(05-init-depth-buffer)
add_subdirectory(06-init-uniform-buffer)
add_subdirectory(07-init-pipeline-layout)
add_subdirectory(09-init-render-pass)
add_subdirectory(10-init-shaders)
